--- a/.github/workflows/passwall-checker.yml
+++ b/.github/workflows/passwall-checker.yml
@@ -13,7 +13,7 @@ name: PassWall Checker
 
 env:
   REPO_URL: https://github.com/xiaorouji/openwrt-passwall.git
-  REPO_BRANCH: luci
+  REPO_BRANCH: main
 
 on:
   workflow_dispatch:
