--- a/.config
+++ b/.config
@@ -72,6 +72,7 @@ CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_CM=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-theme-material=y
 # CONFIG_PACKAGE_nlbwmon is not set
+# CONFIG_PACKAGE_pdnsd-alt is not set
 CONFIG_PACKAGE_tailscale=y
 CONFIG_PACKAGE_tailscaled=y
 # CONFIG_PACKAGE_vsftpd-alt is not set
