--- a/.config
+++ b/.config
@@ -2,11 +2,11 @@ CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_d-team_newifi-d2=y
 CONFIG_DRIVER_11AC_SUPPORT=y
-# CONFIG_IPV6 is not set
 # CONFIG_JSON_OVERVIEW_IMAGE_INFO is not set
 CONFIG_PACKAGE_6in4=y
 # CONFIG_PACKAGE_coremark is not set
 CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
+# CONFIG_PACKAGE_dnsmasq_full_dhcpv6 is not set
 CONFIG_PACKAGE_kmod-mac80211=y
 CONFIG_PACKAGE_kmod-mt76-core=y
 CONFIG_PACKAGE_kmod-mt7603=y
