--- a/.config
+++ b/.config
@@ -6,7 +6,7 @@ CONFIG_DRIVER_11AC_SUPPORT=y
 CONFIG_PACKAGE_6in4=y
 # CONFIG_PACKAGE_coremark is not set
 CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
-# CONFIG_PACKAGE_dnsmasq_full_dhcpv6 is not set
+CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_kmod-mac80211=y
 CONFIG_PACKAGE_kmod-mt76-core=y
 CONFIG_PACKAGE_kmod-mt7603=y
