--- a/.config
+++ b/.config
@@ -23,10 +23,10 @@ CONFIG_PACKAGE_asterisk-res-musiconhold=y
 CONFIG_PACKAGE_asterisk-res-pjproject=y
 CONFIG_PACKAGE_asterisk-res-rtp-asterisk=y
 CONFIG_PACKAGE_asterisk-res-sorcery=y
-CONFIG_PACKAGE_asterisk-res-stun-monitor=y
 # CONFIG_PACKAGE_block-mount is not set
 # CONFIG_PACKAGE_brcmfmac-firmware-usb is not set
 # CONFIG_PACKAGE_coremark is not set
+# CONFIG_PACKAGE_ddns-scripts_aliyun is not set
 CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
 CONFIG_PACKAGE_ipv6helper=y
 # CONFIG_PACKAGE_iw is not set
@@ -45,6 +45,7 @@ CONFIG_PACKAGE_ipv6helper=y
 # CONFIG_PACKAGE_luci-app-arpbind is not set
 # CONFIG_PACKAGE_luci-app-filetransfer is not set
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
+CONFIG_PACKAGE_luci-app-msd_lite=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
@@ -65,7 +66,6 @@ CONFIG_PACKAGE_luci-app-phtunnel=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING is not set
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_PDNSD is not set
 CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_CM=y
-CONFIG_PACKAGE_luci-app-udpxy=y
 # CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go is not set
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
 # CONFIG_PACKAGE_luci-lib-fs is not set
