--- a/.config
+++ b/.config
@@ -1,19 +1,27 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_d-team_newifi-d2=y
+CONFIG_DRIVER_11AC_SUPPORT=y
 # CONFIG_JSON_OVERVIEW_IMAGE_INFO is not set
 CONFIG_PACKAGE_6in4=y
 # CONFIG_PACKAGE_coremark is not set
 # CONFIG_PACKAGE_ddns-scripts_aliyun is not set
 CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
 CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_kmod-mac80211=y
+CONFIG_PACKAGE_kmod-mt7603=y
+# CONFIG_PACKAGE_kmod-mt7603e is not set
+CONFIG_PACKAGE_kmod-mt76x2=y
+# CONFIG_PACKAGE_kmod-mt76x2e is not set
 # CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
 # CONFIG_PACKAGE_kmod-tcp-bbr is not set
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-arpbind is not set
 # CONFIG_PACKAGE_luci-app-filetransfer is not set
+CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-app-minidlna=y
+# CONFIG_PACKAGE_luci-app-mtwifi is not set
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
@@ -31,6 +39,9 @@ CONFIG_PACKAGE_luci-app-samba4=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_PDNSD is not set
 # CONFIG_PACKAGE_luci-lib-fs is not set
 CONFIG_PACKAGE_luci-theme-material=y
+# CONFIG_PACKAGE_mt_wifi is not set
 # CONFIG_PACKAGE_nlbwmon is not set
-# CONFIG_PACKAGE_openssl-util is not set
 # CONFIG_PACKAGE_pdnsd-alt is not set
+CONFIG_PACKAGE_wireless-regdb=y
+# CONFIG_PACKAGE_wireless-tools is not set
+CONFIG_PACKAGE_wpad-basic=y
