--- a/.config
+++ b/.config
@@ -1,38 +1,77 @@
-CONFIG_TARGET_ramips=y
-CONFIG_TARGET_ramips_mt7621=y
-CONFIG_TARGET_ramips_mt7621_DEVICE_d-team_newifi-d2=y
+CONFIG_TARGET_bcm53xx=y
+CONFIG_TARGET_bcm53xx_generic=y
+CONFIG_TARGET_bcm53xx_generic_DEVICE_phicomm_k3=y
+CONFIG_ASTERISK_LIBXSLT_SUPPORT=y
+CONFIG_ASTERISK_LOW_MEMORY=y
+# CONFIG_DRIVER_11AC_SUPPORT is not set
 # CONFIG_JSON_OVERVIEW_IMAGE_INFO is not set
+# CONFIG_KERNEL_DEVMEM is not set
 CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_asterisk=y
+CONFIG_PACKAGE_asterisk-app-confbridge=y
+CONFIG_PACKAGE_asterisk-bridge-builtin-features=y
+CONFIG_PACKAGE_asterisk-bridge-simple=y
+CONFIG_PACKAGE_asterisk-bridge-softmix=y
+CONFIG_PACKAGE_asterisk-chan-sip=y
+CONFIG_PACKAGE_asterisk-codec-alaw=y
+CONFIG_PACKAGE_asterisk-codec-g722=y
+CONFIG_PACKAGE_asterisk-codec-g729=y
+CONFIG_PACKAGE_asterisk-codec-gsm=y
+CONFIG_PACKAGE_asterisk-codec-ulaw=y
+CONFIG_PACKAGE_asterisk-format-wav=y
+CONFIG_PACKAGE_asterisk-res-musiconhold=y
+CONFIG_PACKAGE_asterisk-res-pjproject=y
+CONFIG_PACKAGE_asterisk-res-rtp-asterisk=y
+CONFIG_PACKAGE_asterisk-res-sorcery=y
+# CONFIG_PACKAGE_block-mount is not set
+# CONFIG_PACKAGE_brcmfmac-firmware-usb is not set
 # CONFIG_PACKAGE_coremark is not set
 # CONFIG_PACKAGE_ddns-scripts_aliyun is not set
 CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
 CONFIG_PACKAGE_ipv6helper=y
-CONFIG_PACKAGE_kmod-mt7603=y
-# CONFIG_PACKAGE_kmod-mt7603e is not set
-CONFIG_PACKAGE_kmod-mt76x2=y
-# CONFIG_PACKAGE_kmod-mt76x2e is not set
+# CONFIG_PACKAGE_iw is not set
+# CONFIG_PACKAGE_iwinfo is not set
+# CONFIG_PACKAGE_k3screenctrl is not set
+# CONFIG_PACKAGE_k3wifi is not set
+# CONFIG_PACKAGE_kmod-brcmfmac is not set
+# CONFIG_PACKAGE_kmod-brcmutil is not set
+# CONFIG_PACKAGE_kmod-cfg80211 is not set
+# CONFIG_PACKAGE_kmod-leds-gpio is not set
 # CONFIG_PACKAGE_kmod-tcp-bbr is not set
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-arpbind is not set
 # CONFIG_PACKAGE_luci-app-filetransfer is not set
-CONFIG_PACKAGE_luci-app-hd-idle=y
-CONFIG_PACKAGE_luci-app-minidlna=y
-# CONFIG_PACKAGE_luci-app-mtwifi is not set
+CONFIG_PACKAGE_luci-app-msd_lite=y
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_tuic_client=y
 CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
-CONFIG_PACKAGE_luci-app-samba4=y
+CONFIG_PACKAGE_luci-app-socat=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA is not set
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING is not set
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_PDNSD is not set
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_CM=y
+# CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go is not set
+# CONFIG_PACKAGE_luci-app-vsftpd is not set
+# CONFIG_PACKAGE_luci-lib-fs is not set
 CONFIG_PACKAGE_luci-theme-material=y
-# CONFIG_PACKAGE_wireless-tools is not set
-CONFIG_PACKAGE_wpad-basic=y
+# CONFIG_PACKAGE_nlbwmon is not set
+# CONFIG_PACKAGE_pdnsd-alt is not set
+CONFIG_PACKAGE_tailscale=y
+CONFIG_PACKAGE_tailscaled=y
+# CONFIG_PACKAGE_vsftpd-alt is not set
+# CONFIG_PACKAGE_wireless-regdb is not set
+# CONFIG_PACKAGE_wpad-openssl is not set
+CONFIG_PACKAGE_xupnpd=y
