--- a/D2.config
+++ b/D2.config
@@ -11,6 +11,7 @@ CONFIG_PACKAGE_kmod-mt7603=y
 # CONFIG_PACKAGE_kmod-mt7603e is not set
 CONFIG_PACKAGE_kmod-mt76x2=y
 # CONFIG_PACKAGE_kmod-mt76x2e is not set
+# CONFIG_PACKAGE_kmod-mtk-hnat is not set
 # CONFIG_PACKAGE_kmod-tcp-bbr is not set
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-arpbind is not set
