--- a/.github/workflows/Lean-OpenWrt.yml
+++ b/.github/workflows/Lean-OpenWrt.yml
@@ -23,7 +23,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede.git
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: K3.config
+  CONFIG_FILE: D2.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
